Port Violentmonkey-style install interception and fix Fork URLs