@@ -18,7 +18,7 @@ import java.util.WeakHashMap;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-/** Greasy Fork/Sleazy Fork browsing, installation resolution, and publish prefill support. */
+/** Greasy Fork/Sleazy Fork browsing, installation, and publish-prefill support. */
 final class ForkSiteSupport {
     static final String GREASY_HOST = "greasyfork.org";
     static final String SLEAZY_HOST = "sleazyfork.org";
@@ -29,74 +29,64 @@ final class ForkSiteSupport {
     private static final String PENDING_FILE = "pending-fork-publish.user.js";
 
     private static final Pattern SCRIPT_ID = Pattern.compile("/scripts/(\\d+)(?:[-/]|$)");
-    private static final Pattern INSTALL_LINK = Pattern.compile(
-            "(?is)<a[^>]+(?:class=[\"'][^\"']*install-link[^\"']*[\"'][^>]+)?href=[\"']([^\"']+(?:\\.user\\.js|\\.user\\.css)(?:\\?[^\"']*)?)[\"']"
-    );
-    private static final Pattern ANY_SCRIPT_LINK = Pattern.compile(
-            "(?is)href=[\"']([^\"']+(?:\\.user\\.js|\\.user\\.css)(?:\\?[^\"']*)?)[\"']"
+    private static final Pattern HREF = Pattern.compile(
+            "(?is)href\\s*=\\s*([\"'])(.*?)\\1"
     );
     private static final Map<Activity, String> LAST_INSTALL_PROMPT = new WeakHashMap<>();
 
     private ForkSiteSupport() { }
 
     static boolean isForkHost(String host) {
-        String normalized = normalizeHost(host);
-        return GREASY_HOST.equals(normalized) || SLEAZY_HOST.equals(normalized);
+        return ViolentmonkeyCompat.isForkHost(host);
     }
 
     static boolean isDirectScript(String url) {
-        if (url == null) return false;
-        try {
-            URI uri = new URI(url);
-            String scheme = uri.getScheme();
-            String path = uri.getPath();
-            return ("https".equalsIgnoreCase(scheme) || "http".equalsIgnoreCase(scheme))
-                    && path != null
-                    && (path.toLowerCase(Locale.US).endsWith(".user.js")
-                    || path.toLowerCase(Locale.US).endsWith(".user.css"));
-        } catch (Exception ignored) {
-            return false;
-        }
+        return ViolentmonkeyCompat.isDirectUserscriptUrl(url);
     }
 
     static boolean isForkScriptPage(String url) {
-        if (url == null) return false;
-        try {
-            URI uri = new URI(url);
-            return isForkHost(uri.getHost()) && SCRIPT_ID.matcher(uri.getPath() == null ? "" : uri.getPath()).find();
-        } catch (Exception ignored) {
-            return false;
-        }
+        return ViolentmonkeyCompat.isForkScriptPage(url);
     }
 
     static boolean isInstallablePage(String url) {
-        return isDirectScript(url) || isForkScriptPage(url);
+        return isDirectScript(url) || isForkScriptPage(url) || hasInstallMarker(url);
+    }
+
+    static boolean hasInstallMarker(String url) {
+        return ViolentmonkeyCompat.hasInstallMarker(url);
+    }
+
+    static String installUrlFromMarker(String url) {
+        return ViolentmonkeyCompat.installUrlFromMarker(url);
     }
 
     static String resolveInstallUrl(String pageUrl) throws Exception {
+        String marked = installUrlFromMarker(pageUrl);
+        if (marked != null) return marked;
         if (isDirectScript(pageUrl)) return pageUrl;
         if (!isForkScriptPage(pageUrl)) throw new Exception("This page is not a userscript page");
 
         String html = MonkeyStore.fetch(pageUrl);
-        String href = firstMatch(INSTALL_LINK, html);
-        if (href == null) href = firstMatch(ANY_SCRIPT_LINK, html);
-        if (href == null) {
-            Matcher id = SCRIPT_ID.matcher(new URI(pageUrl).getPath());
-            if (!id.find()) throw new Exception("Could not find the script install URL");
-            String host = normalizeHost(new URI(pageUrl).getHost());
-            String updateHost = GREASY_HOST.equals(host) ? "update.greasyfork.org" : "update.sleazyfork.org";
-            return "https://" + updateHost + "/scripts/" + id.group(1) + "/script.user.js";
+        Matcher matcher = HREF.matcher(html);
+        while (matcher.find()) {
+            String href = htmlDecode(matcher.group(2));
+            String resolved;
+            try {
+                resolved = new URL(new URL(pageUrl), href).toString();
+            } catch (Exception ignored) {
+                continue;
+            }
+            if (!isDirectScript(resolved)) continue;
+            String host = ViolentmonkeyCompat.normalizeHost(new URI(resolved).getHost());
+            if (isAllowedForkDownloadHost(host)) return resolved;
         }
 
-        href = htmlDecode(href);
-        String resolved = new URL(new URL(pageUrl), href).toString();
-        String host = normalizeHost(new URI(resolved).getHost());
-        if (!isAllowedDownloadHost(host)) throw new Exception("Refused non-Fork script host: " + host);
-        return resolved;
+        // Violentmonkey-compatible fallback that preserves both script ID and slug.
+        return ViolentmonkeyCompat.fallbackForkInstallUrl(pageUrl);
     }
 
     static void openSite(Activity activity, String host) {
-        openUrl(activity, "https://" + normalizeHost(host) + "/en/scripts");
+        openUrl(activity, "https://" + ViolentmonkeyCompat.normalizeHost(host) + "/en/scripts");
     }
 
     static void openUrl(Activity activity, String url) {
@@ -111,6 +101,42 @@ final class ForkSiteSupport {
                 .putExtra("script_page_url", pageUrl));
     }
 
+    /**
+     * Ports Violentmonkey's install-link interception to Chrome Android without webRequest.
+     * A click on a .user.js/.user.css link is converted into a temporary URL hash marker that the
+     * native tab poller can observe and open in the full-screen install reviewer.
+     */
+    static void injectInstallClickBridge(ChromeBridge.Page page) {
+        if (page == null || page.incognito || !isForkScriptPage(page.url)) return;
+        String payload = "(function(){"
+                + "if(window.__MonkeyScriptInstallBridge)return;"
+                + "window.__MonkeyScriptInstallBridge=true;"
+                + "document.addEventListener('click',function(e){"
+                + "var a=e.target&&e.target.closest?e.target.closest('a[href]'):null;"
+                + "if(!a)return;"
+                + "var u;try{u=new URL(a.href,location.href)}catch(x){return;}"
+                + "if(!/\\.user\\.(?:js|css)(?:[?#]|$)/i.test(u.href))return;"
+                + "e.preventDefault();e.stopImmediatePropagation();"
+                + "location.hash='monkeyscript-install='+encodeURIComponent(u.href);"
+                + "},true);"
+                + "})();";
+        ChromeBridge.exec(page, payload);
+    }
+
+    static boolean consumeInstallMarker(Activity activity, ChromeBridge.Page page) {
+        if (page == null || page.url == null) return false;
+        String target = installUrlFromMarker(page.url);
+        if (target == null) return false;
+        synchronized (LAST_INSTALL_PROMPT) {
+            if (target.equals(LAST_INSTALL_PROMPT.get(activity))) return false;
+            LAST_INSTALL_PROMPT.put(activity, target);
+        }
+        ChromeBridge.exec(page,
+                "try{history.replaceState(null,'',location.pathname+location.search)}catch(e){};");
+        openInstallPreview(activity, target);
+        return true;
+    }
+
     static void maybePromptDirectInstall(Activity activity, String url) {
         if (!isDirectScript(url)) return;
         synchronized (LAST_INSTALL_PROMPT) {
@@ -121,7 +147,7 @@ final class ForkSiteSupport {
     }
 
     static void queuePublish(Activity activity, Userscript script, String targetHost) throws Exception {
-        String host = normalizeHost(targetHost);
+        String host = ViolentmonkeyCompat.normalizeHost(targetHost);
         if (!isForkHost(host)) throw new Exception("Unsupported publishing site");
         if (script == null || script.source == null || script.source.trim().isEmpty()) {
             throw new Exception("The script has no source code");
@@ -131,7 +157,9 @@ final class ForkSiteSupport {
         }
 
         File directory = new File(activity.getFilesDir(), "monkeyscript");
-        if (!directory.exists() && !directory.mkdirs()) throw new Exception("Cannot create publish staging directory");
+        if (!directory.exists() && !directory.mkdirs()) {
+            throw new Exception("Cannot create publish staging directory");
+        }
         File pending = new File(directory, PENDING_FILE);
         try (FileOutputStream output = new FileOutputStream(pending)) {
             output.write(script.source.getBytes(StandardCharsets.UTF_8));
@@ -156,7 +184,7 @@ final class ForkSiteSupport {
         if (host.isEmpty()) return false;
         try {
             URI current = new URI(page.url);
-            if (!host.equals(normalizeHost(current.getHost()))) return false;
+            if (!host.equals(ViolentmonkeyCompat.normalizeHost(current.getHost()))) return false;
             String path = preferences.getString(PENDING_PATH, "/en/script_versions/prefill");
             File pending = new File(new File(activity.getFilesDir(), "monkeyscript"), PENDING_FILE);
             if (!pending.isFile()) {
@@ -167,14 +195,20 @@ final class ForkSiteSupport {
             try (FileInputStream input = new FileInputStream(pending)) {
                 source = MonkeyStore.read(input, 3 * 1024 * 1024);
             }
-            String encoded = Base64.encodeToString(source.getBytes(StandardCharsets.UTF_8), Base64.NO_WRAP);
+            String encoded = Base64.encodeToString(
+                    source.getBytes(StandardCharsets.UTF_8),
+                    Base64.NO_WRAP
+            );
             String action = "https://" + host + path;
-            String payload = "(function(){if(window.__MonkeyForkPublish)return;window.__MonkeyForkPublish=true;"
-                    + "const b='" + encoded + "';const x=Uint8Array.from(atob(b),c=>c.charCodeAt(0));"
-                    + "const code=new TextDecoder().decode(x);const f=document.createElement('form');"
-                    + "f.method='POST';f.enctype='multipart/form-data';f.action='" + action + "';"
-                    + "const t=document.createElement('textarea');t.name='script_version[code]';t.value=code;"
-                    + "f.appendChild(t);f.style.display='none';document.documentElement.appendChild(f);f.submit();})();";
+            String payload = "(function(){if(window.__MonkeyForkPublish)return;"
+                    + "window.__MonkeyForkPublish=true;const b='" + encoded + "';"
+                    + "const x=Uint8Array.from(atob(b),c=>c.charCodeAt(0));"
+                    + "const code=new TextDecoder().decode(x);"
+                    + "const f=document.createElement('form');f.method='POST';"
+                    + "f.enctype='multipart/form-data';f.action='" + action + "';"
+                    + "const t=document.createElement('textarea');"
+                    + "t.name='script_version[code]';t.value=code;f.appendChild(t);"
+                    + "f.style.display='none';document.documentElement.appendChild(f);f.submit();})();";
             if (!ChromeBridge.exec(page, payload)) return false;
             clearPending(activity);
             return true;
@@ -201,7 +235,7 @@ final class ForkSiteSupport {
         if (installUrl == null || installUrl.isEmpty()) return null;
         try {
             URI uri = new URI(installUrl);
-            String host = normalizeHost(uri.getHost());
+            String host = ViolentmonkeyCompat.normalizeHost(uri.getHost());
             boolean matchingFamily = targetHost.equals(host)
                     || (GREASY_HOST.equals(targetHost) && "update.greasyfork.org".equals(host))
                     || (SLEAZY_HOST.equals(targetHost) && "update.sleazyfork.org".equals(host));
@@ -213,26 +247,18 @@ final class ForkSiteSupport {
         }
     }
 
-    private static boolean isAllowedDownloadHost(String host) {
+    private static boolean isAllowedForkDownloadHost(String host) {
         return isForkHost(host)
                 || "update.greasyfork.org".equals(host)
                 || "update.sleazyfork.org".equals(host);
     }
 
-    private static String firstMatch(Pattern pattern, String value) {
-        Matcher matcher = pattern.matcher(value);
-        return matcher.find() ? matcher.group(1) : null;
-    }
-
     private static String htmlDecode(String value) {
         return value.replace("&amp;", "&")
                 .replace("&#39;", "'")
-                .replace("&quot;", "\"");
-    }
-
-    private static String normalizeHost(String host) {
-        if (host == null) return "";
-        String normalized = host.toLowerCase(Locale.US).trim();
-        return normalized.startsWith("www.") ? normalized.substring(4) : normalized;
+                .replace("&#x27;", "'")
+                .replace("&quot;", "\"")
+                .replace("&lt;", "<")
+                .replace("&gt;", ">");
     }
 }
